Fix a broken link.

--- a/soup/rubyfools-redux.yml
+++ b/soup/rubyfools-redux.yml
@@ -3,7 +3,7 @@ Rubyfools, Redux
 
 Thanks to everyone who attended the RubyFools conferences in Copenhagen and Oslo! I had a great time, even if I did end up in hospital:
 
-<a href="http://interblah.net/assets/2008/4/8/copenhagen_start_slide.001.jpg" title="My first slide from the Copenhagen presentation. I was worried that my voice wouldn't hold up!"><img src="http://interblah.net/assets/2008/4/8/copenhagen_start_slide.001.jpg" width="425" height="318"></img>
+<a href="http://interblah.net/assets/2008/4/8/copenhagen_start_slide.001.jpg" title="My first slide from the Copenhagen presentation. I was worried that my voice wouldn't hold up!"><img src="http://interblah.net/assets/2008/4/8/copenhagen_start_slide.001.jpg" width="425" height="318"></img></a>
 
 The story is simply that I got some food stuck in my throat (lodged around about <a href="http://interblah.net/assets/2008/4/8/throat.005.jpg">here</a> to be exact), which meant that I couldn't swallow anything. At all. After a few hours of spitting every 5 minutes to avoid drowning, we took a trip to the hospital, and they kept me in overnight after fizzy-water torture failed to dislodge the offending piece of fondue meat. 
 
