Empty anchors are visible in the new design.

--- a/soup/shared-hosting-is-alright.yml
+++ b/soup/shared-hosting-is-alright.yml
@@ -49,8 +49,7 @@ What I really find weird that people would respond to Dreamhost's expression of 
 Can we dial back on this brand of deeply passionate but equally-deeply uninformed knee-jerk reaction? Shared hosting might not the best way to deploy a critical application, but not every app is really that critical. And that's OK.
 
 
-How I Use Dreamhost<a name="how-i-use-dreamhost"></a>
-------------------
+<h2 id="how-i-use-dreamhost">How I Use Dreamhost</h2>
 
 In case anyone's interested, I do have a few things I do for the applications that I run on Dreamhost:
 
