--- a/soup/system.yml
+++ b/soup/system.yml
@@ -142,6 +142,11 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
     margin: 1em;
   }
 
+  #content blockquote p a {
+    padding: 0;
+    color: #888;
+  }
+
   pre {
     background-color: #f6f6f6;
     border: 1px solid #ccc;
