Allow searching with GET requests, and add a link to search in the sidebar.

--- a/soup/sidebar.yml
+++ b/soup/sidebar.yml
@@ -1,6 +1,6 @@
 I'm James Adam, a freelance software developer in the UK. I'm <a href="mailto:james@lazyatom.com?subject=Cool Project">available for hire</a>, and you can find out more about me here, or at [lazyatom.com](http://lazyatom.com).
 
-You are reading {link-to-current-snip}. If this isn't what you wanted, you can try the {link_to index}.
+You are reading {link-to-current-snip}. If this isn't what you wanted, you can try the {l index}, or {l search}.
 
 Links
 ----
