--- a/soup/search.yml
+++ b/soup/search.yml
@@ -8,16 +8,26 @@ class Search < Dynasnip
   }
   
   def get(*args)
-    search_form
+    if app.request.params[:q]
+      search
+    else
+      "<h2>Search</h2>" + search_form
+    end
   end
   
   def post(*args)
+    search
+  end
+  
+  private
+  
+  def search
     term = app.request.params[:q]
     if term =~ /[^\w\s\-_\.]/
       "Please only use characters, spaces, hyphens, underscores and periods in your search term"
     else
       matches = `fgrep "#{term}" #{app.config[:soup]}/*.yml`.split("\n")
-      "<h2>Search results</h2>" + if matches.any?
+      "<h2>Search results</h2>" + search_form + if matches.any?
         grouped_matches = {}
         matches.each do |match|
           next if match =~ /::/
@@ -34,13 +44,14 @@ class Search < Dynasnip
               insert(start + term.length, "</span>").
               insert(start, %{<span class="match">}).strip
           end
-          %{<li class="search_result">{link_to #{snip}} &rarr; <i>#{contexts.join("&hellip;")}</i></li>}
+          %{<li class="search_result">{link_to #{snip}} &rarr; <i>#{contexts.join(" &hellip; ")}</i></li>}
         end.join + "</ol>"
       else
         %{<p>No matches for "#{term}"</p>}
-      end + search_form
+      end
     end
   end
+  
   self
 end
 --- # Soup attributes
