--- a/soup/weeknotes-1665.yml
+++ b/soup/weeknotes-1665.yml
@@ -44,3 +44,6 @@ Of course, I may change my mind completely during week 1666, but that's the beau
 
 --- # Soup attributes
 :render_as: Markdown
+:created_at: 2010-04-25 16:30:00 +01:00
+:author: james
+:kind: blog
