Some new sections.

--- a/soup/weeknotes-1665.yml
+++ b/soup/weeknotes-1665.yml
@@ -3,10 +3,12 @@ Weeknotes - 1665
 
 Despite the intention, it's lucky that I didn't *officially* sign up for [project 52][], because I'm failing hard at it. Anyway, a [bunch][1] of [folks][2] have been [doing][3] or talking about 'weeknotes', and so I thought I'd take the opportunity to jump on that bandwagon. Lets start by calculating the week of my life so far: *week 1665*.
 
+
 #Blue
 --------
 
 This week I've been working almost exclusively on [#blue][], which is a project {l FreeRange} is working on for [O2][]. The project exists for a number of reasons, but you can think of it as a 'reimagining' of their [Bluebook][] service for the current web, using modern technologies and 'agile' development techniques. There's been some mild frustration as we've tried to integrate one of the final pieces of the account confirmation process, so unfortunately we still can't send out proper invites yet.
+
 
 Tripping over a Milestone
 -----
@@ -17,12 +19,31 @@ Eventually, only one major story remained, blocked by external processes that we
 
 The solution was obvious, in retrospect: get rid of the milestone. __It was acting as a dam__, stopping us from continuing to add value to the project in different ways while we were blocked. Once we did that, our relationship to the stories that had been pushed below the milestone changed; while we're still spending a great deal of time trying to unblock the story that lies between us and beta testers, we have our momentum back.
 
-Co-locating
+
+REWORK
 ----
 
-Recently I've become more and more convinced that some amount of co-location is important in making an endeavour like {l FreeRange} work. Originally I was quite adamant that no office would be required, and we could all work remotely, but I suspect now that I was conflating a few different things. 
+I finished reading [REWORK][] at the weekend, and while it was principally aimed at businesses building and marketting a product, there were nine or ten chapters in particular that resonated with my own feelings about working effectively as a group. I've made some notes in Google Wave, which I may or may not share, but it was a useful exercise in clarifying my own thinking about how teams operate.
 
-There's a difference between accepting the overheads that an office brings with it, and just doing work in the same space. __The latter doesn't require the former__ - it can be done in someone's home, or a suitable cafe or co-working space (I use [The Hub][] in Kings Cross for exactly this). 
+
+Meetings, and feeling like a team
+----
+
+We have been trying to have weekly 'meetings' with everyone involved in {l FreeRange} since before the start of the year, but in week 1664 - last week - we decided (well, I suggested) we should halt them in favour of more ad-hoc conversations.  
+
+In any business-like context, _having a meeting_ has a special meaning for me - it's time spent directed at achieving some specific and clearly-defined thing. Meetings should be measurable in terms of effectivity. If you're shooting the shit, you're not having a _meeting_, you're doing something else - and that might be perfectly valid, but it's not focussed on achieving anything specific.
+
+The meetings we were having had become formulaic and chore-like, so it felt appropriate to change the tone of those conversations. I'm hoping that the others involved will actively try to instigate and participate in these ad-hoc discussions, but only time will tell. 
+
+This comes back to one of the underlying themes in my thinking over the past few months, being the balance between structured vs. free-form, chaotic interaction; someone at [SRC][] last month suggested it was like communism vs. anarchism, and perhaps they are right.
+
+
+Co-locating (and feeling like a team)
+----
+
+Recently I've become more and more convinced that some amount of co-location is important in making an endeavour like {l FreeRange} work. Originally I was quite adamant that "no office will be required and we can all work remotely", but I suspect now that I was conflating a few different things in that statement.
+
+In a nutshell, there's a difference between accepting the overheads that an office brings with it, and just doing work in the same space. __The latter doesn't require the former__ - we can work together in any number of non-office spaces, in someone's home, or a suitable cafe or a co-working space (like [The Hub][]). 
 
 And don't get me wrong, some amount of independent time is still important, and I have no strong desire to work to any kind of office hours, but I think the discipline that semi-regular co-location brings is a useful force in keeping everyone pointed in the same direction.
 
@@ -33,6 +54,7 @@ An office can work in exactly the same way. In many cases I am sure that it does
 Of course, I may change my mind completely during week 1666, but that's the beauty of it.
 
 
+
 [project 52]: http://project52.info/ 
 [1]: http://blog.jaggeree.com/post/546498475/week-103
 [2]: http://scraplab.net/2010/03/08/week-47/
@@ -41,6 +63,8 @@ Of course, I may change my mind completely during week 1666, but that's the beau
 [O2]: http://o2.co.uk
 [Bluebook]: http://bluebook.o2.co.uk
 [The Hub]: http://kingscross.the-hub.net/public/
+[REWORK]: http://37signals.com/rework/
+[SRC]: http://scottishrubyconference.com/
 
 --- # Soup attributes
 :render_as: Markdown
