--- a/soup/weeknotes-1665.yml
+++ b/soup/weeknotes-1665.yml
@@ -1,7 +1,7 @@
 Weeknotes - 1665
 ================
 
-Despite the intention, it's lucky that I didn't *officially* sign up for [project 52][], because I'm failing hard at it. Anyway, a [bunch][1] of [folks][2] have been [doing][3] or talking about 'weeknotes', and so I thought I'd take the opportunity to jump on that bandwagon. Lets start by calculating the week of my life so far: *week 1665*.
+Despite the intention, it's lucky that I didn't *officially* sign up for [project 52][], because I'm failing hard at it. Anyway, a [bunch][1] of [folks][2] have been [doing][3] or talking about '__weeknotes__', and so I thought I'd take the opportunity to jump on that bandwagon. Lets start by calculating the week of my life so far: *week 1665*.
 
 
 #Blue
