--- a/soup/The Straight Path.yml
+++ b/soup/The Straight Path.yml
@@ -66,7 +66,7 @@ It's more valuable to pick an approach, a technique or a methodology that you __
 
 That what agile and TDD have in common with martial arts, dieting, exercise, yoga, and all manner of pursuits. It's about __discipline__. 
 
-It's about saying "this is how I do things, __because I know that this works__".
+It's about saying "this is how I do things, __because I know that this works.__"
 
 And it's about always being aware of the costs, the debt, of deviating from that approach, technique or methodology; judging when we must make sacrifices to survive, and when it is better to preserve our behaviour instead.
 
@@ -74,7 +74,7 @@ And it's about always being aware of the costs, the debt, of deviating from that
 Epilogue (and the real point)
 ----
 
-There's now way to be disciplined if you don't actually know what you are doing. You can't practice a martial art if you haven't been taught the basics, and then worked to refine it under supervision. You can't stick to a diet if you don't have a clear understanding of what the rules of that diet are. You aren't doing yoga if you're just standing on one leg for a few minutes every day.
+There's no way to be disciplined if you can't describe what you should be doing. You can't practice a martial art if you haven't been taught the basics, and then worked to refine it under supervision. You can't stick to a diet if you don't have a clear understanding of what the rules of that diet are. You aren't doing yoga if you're just standing on one leg for a few minutes every day.
 
 And you can't claim to "be doing agile software development" if you don't have a clear definition of what that means, and are willing to stick to that definition regardless of what the client wants, thinks or says.
 
