--- a/soup/The Straight Path.yml
+++ b/soup/The Straight Path.yml
@@ -68,7 +68,7 @@ That what agile and TDD have in common with martial arts, dieting, exercise, yog
 
 It's about saying "this is how I do things, __because I know that this works.__"
 
-And it's about always being aware of the costs, the debt, of deviating from that approach, technique or methodology; judging when we must make sacrifices to survive, and when it is better to preserve our behaviour instead.
+And it's about always being aware of the costs, the debt, of deviating from that approach, technique or methodology; judging when we must make sacrifices to survive, and when it is better to preserve our behaviour instead. __It's about always being conscious of the distance between you and the ideal, and trying to get back to the ideal as soon as possible.__
 
 
 Epilogue (and the real point)
