--- a/soup/freeagent-widget-update.yml
+++ b/soup/freeagent-widget-update.yml
@@ -1,9 +1,7 @@
 FreeAgent Widget Update
 ===============
 
-(another update: fixed some broken timer resetting behaviour, please [grab 1.3.1][download] if you haven't already)
-
-Just a quick note to say that I've updated the widget to 1.3.1 - [download it here][download].
+(another update: please grab [FreeAgent Widget 1.3.2 here][download].)
 
 [![FreeAgent Timesheets Widget][widgetimage]][github]
 
@@ -13,7 +11,7 @@ See the [original announcement][] for more details, and the source is always ava
 
 Also please note that you'll need API access turned on; for more details see the [recent post on FreeAgent Central][api].
 
-[download]: http://public.lazyatom.com/FreeAgent-1.3.1.zip
+[download]: http://public.lazyatom.com/FreeAgent-1.3.2.zip
 [github]: http://github.com/lazyatom/freeagent-widget
 [widgetimage]: http://interblah.net/assets/freeagent-widget-1.2.png
 [original announcement]: http://interblah.net/freeagent-widget
