Added some more annoyances, thanks to some promting from Jason Cale.

--- a/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
+++ b/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
@@ -1,12 +1,26 @@
 Whenever I read certain phrases, I seem to have reasonably consistent reactions to them. I'm cataloguing them here.
 
-"The guys at" (i.e. "The guys at twitter", "The 37signals guys", etc) always highlights the surplus of males, particularly in software development. I'm not saying that it isn't true, but for some reason I do wish that people would stop using this particular turn of phrase. On a related note, I find it particularly amusing when someone says "The engines guys", given that I am the only real developer involved in that project. Anyway.
+"The guys at" (i.e. "The guys at twitter", "The 37signals guys", etc) always highlights the surplus of males, particularly in software development. I'm not saying that it isn't true, but for some reason I do wish that people would stop using this particular turn of phrase. On a related note, I find it particularly amusing when someone says "The engines guys", given that I am the only developer really involved in that project. Anyway.
 
 Tweets starting with "Hey, ", or "So, ", as if we were just hanging out, and they thought of something to say. Let me make it clear: I am not hanging out with you people on twitter.
 
 Sentences that start with "my friend <x>", which basically means you are bragging about who you are friends with.
 
-Any kind of earnestness or statement of intent or values - this is the internet, of course what you are writing is bullshit. Even if the person writing it is me! Huzzah.--- # Soup attributes
+Any kind of earnestness or statement of intent or values - this is the internet, of course what you are writing is bullshit. Even if the person writing it is me! Huzzah.
+
+Oh, "Pro tip". Here, let me give you a 'pro tip': You can explain your tip in more detail if you don't prefix it with some wanky phrase.
+
+If you say "you're doing it wrong", then, well... you're doing it wrong.
+
+I don't even want to get into "+1"-ing things.
+
+Replace every usage of "hacking on" with "building some software using", and it's much more humane. Don't pretend that we are 'hackers'. We aren't even 'sneakers'. Most of us are building crappy CMS tools for boring businesses.
+
+Tweeting about your blog posts. If I cared about your blog posts, I'd subscriber to your RSS/atom feed.
+
+Literally any reference to your 'followers' in a tweet, as if you have an audience, or a following, like you are soe kind of fucking Jesus-type character.
+
+--- # Soup attributes
 :render_as: Markdown
 :updated_at: 2009-06-10 14:59:19 +01:00
 :name: things-that-I-think-when-reading-stuff-written-on-the-internet
