Update with link to EuRuKo day 2 notes.

--- a/soup/weeknotes-1670.yml
+++ b/soup/weeknotes-1670.yml
@@ -26,7 +26,9 @@ There's also some very positive noise surrounding the future of [hashblue](http:
 EuRuKo
 -----
 
-I'm at [EuRuKo](http://euruko2010.org) this weekend, but rather than taking any notes, you can read [some good EuRuKo notes courtesy of Markus Prinz here](http://nuclearsquid.com/writings/euruko-day1.html). I'm still not sure if conferences work very well for me in terms of learning, or indeed socialising, but I suspect that's something to do with how I approach conferences, and not exclusively a problem of the format.
+I'm at [EuRuKo](http://euruko2010.org) this weekend, but rather than taking any notes, you can read [some good EuRuKo notes courtesy of Markus Prinz here](http://nuclearsquid.com/writings/euruko-day1.html) (__update__: [day 2 as well](http://nuclearsquid.com/writings/euruko-day2.html)). 
+
+I'm still not sure if conferences work very well for me in terms of learning, or indeed socialising, but I suspect that's something to do with how I approach conferences, and not exclusively a problem of the format.
 
 
 Hmm. These posts need some embedded movies and pictures. Perhaps I'll do that in [week 1671](/weeknotes-1671).
@@ -40,6 +42,6 @@ Hmm. These posts need some embedded movies and pictures. Perhaps I'll do that in
 :render_as: Markdown
 :author: james
 :kind: blog
-:created_at: 2010-05-24 21:28:29 +01:00
+:created_at: 2010-05-29 21:28:29 +01:00
 :name: weeknotes-1669
-:created_at: 2010-05-24 21:28:29 +01:00
+:created_at: 2010-05-30 11:02:29 +01:00
