Tweaking layout and fixing time

--- a/soup/ralph-three.yml
+++ b/soup/ralph-three.yml
@@ -3,17 +3,26 @@ Ralph Three, He Is Is Here
 
 <pre style="font-size: 200%;">all right
 %um
-this is exciting for me because %uh I've been talking about
+this is exciting for me because 
+%uh 
+I've been talking about
 ralph three
 for a long time and %uh
-last year and I think even before that %uh
-we were talking a lot about all the plans
-we have peremptory all the wonderful things that we wanted to do
-but it always feels kind of %uh hollow
+last year and I think even 
+before that 
+%uh
+we were talking a lot 
+about all the plans
+we have peremptory all the 
+wonderful things that we wanted to do
+but it always feels kind of
+%uh
+hollow
 to be talking about future Co
-it is much more interesting in my mind too
-talk about excess think about which is why
-today highs along with special
+it is much more interesting in 
+my mind too talk about excess think 
+about which is why today highs 
+along with special
 because
 ralph three
 he is is here</pre>
@@ -23,4 +32,4 @@ he is is here</pre>
 --- # Soup attributes
 :render_as: Markdown
 :kind: blog
-:created_at: 2010-06-10 22:54:00 +0100
+:created_at: 2010-06-10 22:54:00 +01:00
