--- a/soup/ralph-three.yml
+++ b/soup/ralph-three.yml
@@ -14,14 +14,16 @@ before that
 we were talking a lot 
 about all the plans
 we have peremptory all the 
-wonderful things that we wanted to do
+wonderful things that 
+we wanted to do
 but it always feels kind of
 %uh
 hollow
 to be talking about future Co
 it is much more interesting in 
-my mind too talk about excess think 
-about which is why today highs 
+my mind too talk about
+excess think about 
+which is why today highs 
 along with special
 because
 ralph three
