--- a/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
+++ b/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
@@ -18,7 +18,9 @@ Replace every usage of "hacking on" with "building some software using", and it'
 
 Tweeting about your blog posts. If I cared about your blog posts, I'd subscriber to your RSS/atom feed.
 
-Literally any reference to your 'followers' in a tweet, as if you have an audience, or a following, like you are soe kind of fucking Jesus-type character.
+Literally any reference to your 'followers' in a tweet, as if you have an audience, or a following, like you are some kind of fucking Jesus-type character.
+
+Anything described as being "for the rest of us". What terrifying remainder you are pitching too, I am not a part of it. Don't make me blow up the planet.
 
 --- # Soup attributes
 :render_as: Markdown
