--- a/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
+++ b/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
@@ -20,7 +20,7 @@ Tweeting about your blog posts. If I cared about your blog posts, I'd subscriber
 
 Literally any reference to your 'followers' in a tweet, as if you have an audience, or a following, like you are some kind of fucking Jesus-type character.
 
-Anything described as being "for the rest of us". What terrifying remainder you are pitching too, I am not a part of it. Don't make me blow up the planet.
+Anything described as being "for the rest of us". Whatever terrifying remainder you are pitching to, I am not a part of it. Don't make me blow up the planet.
 
 --- # Soup attributes
 :render_as: Markdown
