--- a/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
+++ b/soup/things-that-I-think-when-reading-stuff-written-on-the-internet.yml
@@ -22,6 +22,8 @@ Literally any reference to your 'followers' in a tweet, as if you have an audien
 
 Anything described as being "for the rest of us". Whatever terrifying remainder you are pitching to, I am not a part of it. Don't make me blow up the planet.
 
+When someone tweets ' blah blah blah *REDACTED*'. It's basically saying "I know something cool". Oh, you tease, you. Whoop-de-*fucking*-do for you.
+
 --- # Soup attributes
 :render_as: Markdown
 :updated_at: 2009-06-10 14:59:19 +01:00
